new jetty server setup, migration rework